Bg: Fix z-index of share button

--- a/src/Components/ArticleLarge/ArticleLarge.css
+++ b/src/Components/ArticleLarge/ArticleLarge.css
@@ -46,6 +46,7 @@
   }
 
 #icon_large {
+  z-index: 100;
   font-size: 2.5rem;
   left: 95%;
 }
